--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>WELCOME 2 HELL</title>
+    <link rel="stylesheet" type="text/css" href="main.css">
   </head>
   <body>
-    <img src="Open-plan-office-012.jpg" style="width:100%; height:100%">
+    <div class="container">
+      <img src="./imgs/1.jpg">
+      <img src="./imgs/2.jpg">
+      <img src="./imgs/3.jpg">
+      <img src="./imgs/4.jpg">
+      <img src="./imgs/5.jpg">
+    </div>
     <script src="bundle.js"></script>
   </body>
 </html>
