sick title screen

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" type="text/css" href="main.css">
   </head>
   <body>
+    <center>
+      <h1>OPEN-PLAN OFFICE SIMULATOR</h1>
+    </center>
     <div class="container">
       <img src="./imgs/1.jpg">
       <img src="./imgs/2.jpg">
