yes, that is worse now

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <center>
       <h1>OPEN-PLAN OFFICE SIMULATOR</h1>
     </center>
-    <div class="container">
+    <div>
       <img src="./imgs/1.jpg">
       <img src="./imgs/2.jpg">
       <img src="./imgs/3.jpg">
